Added Routing pages

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -72,3 +72,12 @@ body {
   border: 1px solid #dfdfdf;
   outline: none;
 }
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+/* Active route */
+.active {
+  color: #8a4baf;
+}
